--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1160,7 +1160,7 @@ const IconAltText_BOOK = {
       vendors: ['Minerva', 'Mortimer', 'Samuel', 'Regs', 'Windy'],
       get alt() { return `Sold by Gold Bullion Vendor (${this.vendors.join(', ')})`; }
     },
-    StampsVendor: { alt: "Sold by Giuseppe Della Ripa in The Whitespring" },
+    StampsVendor: { alt: "Sold by Giuseppe Della Ripa" },
     DailyOps: { alt: "Daily Ops Reward" },
     CommonWorkshop: { alt: "Common Workshop Claim/Defense Reward" },
     RaidsReward: { alt: "Gleaming Depths Raid Reward" },
@@ -1172,6 +1172,7 @@ const IconAltText_BOOK = {
     PublicEventRewards: { alt: "Public Event Reward" },
     EquinoxRewards: { alt: "Mothman Equinox Seasonal Event Reward" },
     GrahmVendor: { alt: "Sold by Grahm" },
+    UnusedContent: { alt: "Unused Content"}
   };
 
 function getTooltipText_BOOK(tag) {
