--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -978,6 +978,52 @@ let currentSort = 'camp-top';
 let currentSearchBy = 'name';
 let activeFilters = new Set()
 
+function initLazyImages(options = {}) {
+  const selector = options.selector || 'img.lazy[data-src]';
+  const preloadDelay = options.preloadDelay || 2000;
+  const batchSize = options.batchSize || 5;
+  const batchInterval = options.batchInterval || 100;
+
+  const lazyImages = new Set(document.querySelectorAll(selector));
+
+  // Lazy-load images when they enter the viewport
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        const img = entry.target;
+        img.src = img.dataset.src;
+        img.classList.remove('lazy');
+        lazyImages.delete(img);
+        observer.unobserve(img);
+      }
+    });
+  }, {
+    rootMargin: '200px 0px',
+    threshold: 0.1
+  });
+
+  lazyImages.forEach(img => observer.observe(img));
+
+  // Slowly preload remaining images in batches
+  function preloadRemaining() {
+    const imgs = Array.from(lazyImages);
+    let i = 0;
+
+    function batch() {
+      for (let j = 0; j < batchSize && i < imgs.length; j++, i++) {
+        if (!imgs[i].src) imgs[i].src = imgs[i].dataset.src;
+        lazyImages.delete(imgs[i]);
+      }
+      if (i < imgs.length) setTimeout(batch, batchInterval);
+    }
+
+    batch();
+  }
+
+  setTimeout(preloadRemaining, preloadDelay);
+}
+
+
 // --- Category Icons ---
 const CategoryIcons = {
   'Quest': '/assets/MainCategory-QuestsIcon.svg',
@@ -1568,7 +1614,6 @@ function renderResults(query) {
     const img = document.createElement('img');
     img.src = imgSrc;
     img.alt = r.Name;
-    img.loading = "eager";
 
     // If ARTO was tried first, fallback on error to CNAM
     if (r.ARTO_FormID && r.CNAM_FormID) {
