--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1709,6 +1709,7 @@ function renderResults(query) {
 if (hasBook) {
   const BookTagIcons = {
     'UnusedContent': '/assets/UnusedContentIcon.svg',
+    'BullionVendor': '/assets/BullionIcon.webp',
     'StampsVendor': '/assets/StampIcon.webp',
     'DailyOps': '/assets/DOpsIcon.webp',
     'CommonWorkshop': '/assets/WorkshopIcon.svg',
