--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1742,7 +1742,8 @@ if (hasBook) {
 
 const multiVendorCategories = {
   BullionVendor: {
-    icon: '/assets/BullionIcon.webp'
+    icon: '/assets/BullionIcon.webp',
+    alt: 'Sold by Gold Bullion Vendor'
   },
   RobotVendor: {
     icon: '/assets/RobotVendorIcon.webp',
