--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1743,13 +1743,17 @@ if (hasBook) {
 const multiVendorCategories = {
   BullionVendor: {
     icon: '/assets/BullionIcon.webp',
-    alt: 'Sold by Gold Bullion Vendor'
+    prefixes: [
+      'BullionVendorSamuel', 'BullionVendorMinerva', 'BullionVendorMortimer', 'BullionVendorRegs', 'BullionVendorWindy'
+    ]
   },
   RobotVendor: {
     icon: '/assets/RobotVendorIcon.webp',
     prefixes: ['FreeStatesVendor', 'BrotherhoodVendor', 'RespondersVendor', 'RaiderVendor', 'WhitespringStationVendor']
   }
 };
+
+
 
 function normalizeTag(tag) {
   // Check multi-vendor categories first
@@ -1772,16 +1776,10 @@ function getTooltipTextForTag(tag, originalTags) {
     const presentVendors = originalTags
       .filter(t => t === normalized || (category.prefixes && category.prefixes.some(p => t.startsWith(p))))
       .map(t => {
-        if (t === normalized) {
-          // Default name for main category
-          return normalized.replace('Vendor', '');
-        }
-        // Find matching prefix
+        if (t === normalized) return normalized.replace('Vendor', ''); // "Gold Bullion" for BullionVendor
         const match = category.prefixes.find(p => t.startsWith(p));
         if (!match) return t;
-        // Clean up the vendor name for readability
         let name = match.replace('Vendor', '');
-        // Insert spaces before capital letters for multi-word names
         name = name.replace(/([a-z])([A-Z])/g, '$1 $2');
         return name;
       });
@@ -1792,9 +1790,6 @@ function getTooltipTextForTag(tag, originalTags) {
   const entry = IconAltText_BOOK[normalized];
   return entry?.alt || normalized;
 }
-
-
-
 
   const bookFulls = String(r.BOOK_FULL || '')
     .split(';')
