--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1745,7 +1745,8 @@ const multiVendorCategories = {
     icon: '/assets/BullionIcon.webp',
     prefixes: [
       'BullionVendorSamuel', 'BullionVendorMinerva', 'BullionVendorMortimer', 'BullionVendorRegs', 'BullionVendorWindy'
-    ]
+    ],
+    displayName: 'Gold Bullion'
   },
   RobotVendor: {
     icon: '/assets/RobotVendorIcon.webp',
