--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -170,7 +170,7 @@
 }
 
 #clearFiltersExternal {
-  background-color: var(--card-bg)
+  background-color: var(--card-bg);
   color: var(--dropdown-text, #fff);
   border: 2px solid var(--accent);
   border-left: none;
