--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1559,15 +1559,42 @@ function renderResults(query) {
   function matchesItem(item) {
   if (activeFilters.size === 0) return true;
 
+  // Separate active filters into placement vs category types
   const placementActive = [...activeFilters].filter(f => placementFilters.has(f));
+  const categoryActive  = [...activeFilters].filter(f => !placementFilters.has(f));
 
-  const isChallenge = String(item.BOOK_EDITORID || '').toLowerCase().includes('challenge_');
+  // Determine flags for this item
+  const hasChallenge = String(item.BOOK_EditorID || '').toLowerCase().includes('challenge_');
+  const hasLearn    = String(item.BOOK_SOURCE || '').toLowerCase() === 'learnbypickup';
+  const hasPlan     = !!item.BOOK_FULL?.trim() && !hasChallenge; // exclude challenges from plan
+  const hasEnt      = !!item.ENTM_FULL?.trim();
 
-  // Test Challenge filter alone
-  if (placementActive.includes('challenge')) return isChallenge;
+  // --- Placement filters logic (hybrid XOR style for plan/entitlement) ---
+  let placementMatch = true;
 
-  // Otherwise, don't filter anything (for now)
-  return true;
+  if (placementActive.length > 0) {
+    if (placementActive.includes('plan') && placementActive.includes('entitlement')) {
+      // both selected → OR
+      placementMatch = hasPlan || hasEnt;
+    } else if (placementActive.includes('plan')) {
+      // only plan selected → match ONLY plan
+      placementMatch = hasPlan && !hasEnt;
+    } else if (placementActive.includes('entitlement')) {
+      // only entitlement selected → match ONLY entitlement
+      placementMatch = hasEnt && !hasPlan;
+    }
+  }
+
+  // Challenge and Learn filters act independently
+  if (placementActive.includes('challenge')) placementMatch = placementMatch && hasChallenge;
+  if (placementActive.includes('learn'))      placementMatch = placementMatch && hasLearn;
+
+  // --- Category/subcategory filters (OR) ---
+  const categoryMatch = categoryActive.length === 0 || categoryActive.some(f =>
+    (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f
+  );
+
+  return placementMatch && categoryMatch;
 }
 
   
