--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -833,13 +833,18 @@
       <summary>Version History</summary>
       <div class="changelog-entry">
         <h4>v3.0 Beta</h4>
-        <ul><li>Expansion towards a more generalized database tool:<br>
-- Added category icons<br>
-- Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE<br>
-- Added search filters<br>
-- Added different search options<br>
-- General UI cleanup<br>
-- Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li></ul>
+        <ul>
+          <li>Expansion towards a more generalized database tool:</li>
+          <li>Added category icons</li>
+          <li>Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons. 
+            <br>Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). 
+            <br>NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE
+          </li>
+          <li>Added search filters</li>
+          <li>Added different search options</li>
+          <li>General UI cleanup</li>
+          <li>Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li>
+        </ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
