--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -351,10 +351,16 @@
     background: rgba(255, 192, 15, 0.05);
     border-left: 3px solid var(--accent);
     border-radius: 4px;
-    padding: 6px 12px;
-    margin: 6px 0;
+    list-style-type: disc;
+    padding: 0;
+    margin: 4px 0 0 20px;
     text-align: left;
   }
+  
+  .changelog-entry li {
+    margin-bottom: 6px;          
+    border: none;               
+    background: none;           
 
   .changelog-box {
     border: 2px solid var(--accent);
