--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -340,43 +340,34 @@
     padding: 2px 6px;
   }
 
+  .changelog-entry {
+    background: rgba(255, 192, 15, 0.05);
+    border-left: 3px solid var(--accent);
+    border-radius: 4px;
+    padding: 6px 12px;
+    margin: 6px 0;
+    text-align: left;
+  }
+  
   .changelog-entry h4 {
     margin: 0 0 4px 0;
     font-size: 14px;
     font-weight: bold;
     color: var(--accent);
   }
-
-  .changelog-entry {
-    background: rgba(255, 192, 15, 0.05);
-    border-left: 3px solid var(--accent);
-    border-radius: 4px;
-    list-style-type: disc;
-    padding: 0;
-    margin: 4px 0 0 20px;
-    text-align: left;
+  
+  .changelog-entry ul {
+    list-style-type: disc;      /* normal bullets */
+    margin: 4px 0 0 20px;       /* indent inside box */
+    padding: 0;                 /* remove default padding */
   }
   
-
-  .changelog-box {
-    border: 2px solid var(--accent);
-    background-color: var(--card-bg);
-    padding: 12px;
-    border-radius: 6px;
+  .changelog-entry li {
+    margin-bottom: 4px;         /* spacing between bullets */
+    border: none;               /* ensure no borders appear */
+    background: none;           /* no extra backgrounds */
   }
-
-  .changelog-box ul {
-    list-style-type: disc; /* standard bullets */
-    margin: 0;
-    padding-left: 20px; /* indent bullets nicely */
-  }
-
-  .changelog-box li {
-    margin-bottom: 6px; /* spacing between bullets */
-    border: none;        /* remove any existing li borders */
-    background: none;    /* remove li backgrounds if present */
-  }
-
+  
 
   #searchBox {
     flex: 1;
@@ -851,21 +842,22 @@
       <summary>Version History</summary>
       <div class="changelog-entry">
         <h4>v3.0 Beta</h4>
-        <div class="changelog-box">
-          <ul>
-            <li>Expansion towards a more generalized database tool:</li>
-            <li>Added category icons</li>
-            <li>
-              Added placement conditions (plan, entitlement) for objects, and added respective source icons, i.e. SCORE, Gold Bullion, Stamps, Atomic Shop icons.
-              <br>Known issue with beta version: certain plans will not show yet (i.e. Nuclear Winter stash boxes), nor do challenge requirements (i.e. Kelp Curtain). 
-              <br>NOTE: THIS TOOL DOES NOT DISTINGUISH BETWEEN WHAT IS AND ISN'T OBTAINABLE. PLEASE DOUBLE CHECK THIS YOURSELF IF APPLICABLE
-            </li>
-            <li>Added search filters</li>
-            <li>Added different search options</li>
-            <li>General UI cleanup</li>
-            <li>Full v3.0 release will also list CAMP budget costs, have more source icons, and include further polishing of minor issues</li>
-          </ul>
-        </div>
+        <ul>
+          <li>Expansion towards a more generalized database tool</li>
+          <li>Added category icons</li>
+          <li>
+            Added placement conditions (plan, entitlement) for objects, and added respective source icons (SCORE, Gold Bullion, Stamps, Atomic Shop).
+            <ul>
+              <li>Known issue: certain plans will not show yet (e.g., Nuclear Winter stash boxes)</li>
+              <li>Challenge requirements may also not appear (e.g., Kelp Curtain)</li>
+              <li>NOTE: Tool does not distinguish obtainable vs unobtainable — verify yourself if needed</li>
+            </ul>
+          </li>
+          <li>Added search filters</li>
+          <li>Added different search options</li>
+          <li>General UI cleanup</li>
+          <li>Full v3.0 release will include CAMP budget costs, more source icons, and minor polishing</li>
+        </ul>
       </div>
       <div class="changelog-entry">
         <h4>v2.3.1</h4>
